syntax = "proto3";

package PbActions;

message Command
{
    string input = 1;
    string output = 2;
}